--- a/package.json
+++ b/package.json
@@ -7,5 +7,9 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "brandon.hedge@gmail.com, chrisdlee@gmail.com",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "axel": "0.0.3",
+    "keypress": "^0.2.1"
+  }
 }
