--- a/package.json
+++ b/package.json
@@ -8,8 +8,5 @@
   },
   "author": "brandon.hedge@gmail.com, chrisdlee@gmail.com",
   "license": "MIT",
-  "dependencies": {
-    "axel": "0.0.3",
-    "keypress": "^0.2.1"
-  }
+  "dependencies": {}
 }
